# zensical-updates

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE.md  PLAN.md  README.md  SECURITY.md  code_review.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  settings.yml  zizmor.yml
.github/workflows/: audit.yml  codeql.yml  coverage-comment.yml  dependency-review.yml  docs.yml  gitleaks.yml  lint.yml  osv-scan.yml  pre-commit.yml  release.yml  scorecard.yml  security-lint.yml  test-report.yml  test.yml  typecheck.yml  zizmor.yml
docs/: api.md  cli.md  index.md  usage.md
scripts/: audit.py  regen_requirements.py
src/zensical_updates/: __init__.py  __main__.py  _core.py  build.py  cli.py  config.py  feed.py  frontmatter.py  model.py  render.py  sitemap.py  urls.py
tests/: test_api.py  test_build.py  test_cli.py  test_config.py  test_feed.py  test_frontmatter.py  test_integration.py  test_model.py  test_render.py  test_sitemap.py  test_urls.py
