[project]
name = "zensical-updates"
version = "0.1.0"
description = "Generate a dated Updates (blog) section for zensical sites as plain Markdown"
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE.md"]
requires-python = ">=3.11"
authors = [{ name = "Ivan Anishchuk", email = "ivan@ivananishchuk.net" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/IvanAnishchuk/zensical-updates"
Repository = "https://github.com/IvanAnishchuk/zensical-updates"
Documentation = "https://IvanAnishchuk.github.io/zensical-updates/"
Issues = "https://github.com/IvanAnishchuk/zensical-updates/issues"
Changelog = "https://github.com/IvanAnishchuk/zensical-updates/blob/main/CHANGELOG.md"
Security = "https://github.com/IvanAnishchuk/zensical-updates/blob/main/SECURITY.md"

[project.scripts]
zensical-updates = "zensical_updates.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.13",
    "ty",
    "basedpyright>=1.21",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pip-audit>=2.7",
    "pre-commit>=4.0",
    "zizmor>=1.0",
]
docs = [
    "zensical>=0.0.40",
    "mkdocstrings-python>=2.0",
    "mkdocs-typer2[zensical]>=0.4.0",
]

[build-system]
# >=1.27 for stable PEP 639 license expression + license-files support.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zensical_updates"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/LICENSE.md",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "SIM",   # flake8-simplify
    "BLE",   # flake8-blind-except
    "TRY",   # tryceratops
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "C4",    # flake8-comprehensions
    "PL",    # pylint
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert is fine in tests
    "S603",    # subprocess with validated input in fixtures
    "S607",    # partial executable path in test setup
    "BLE001",  # broad Exception in test fixtures
    "T20",     # print is useful in test debugging
]

[tool.ruff.lint.pylint]
max-args = 8
max-returns = 8
max-branches = 15
max-statements = 60

[tool.ruff.lint.isort]
known-first-party = ["zensical_updates"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.basedpyright]
pythonVersion = "3.11"
include = ["src", "tests"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=zensical_updates",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
    "--cov-report=html:.reports/test/htmlcov",
    "--cov-report=xml:.reports/test/coverage.xml",
    "--junitxml=.reports/test/test-results.xml",
    "-ra",
]
junit_family = "xunit2"
junit_logging = "all"
junit_log_passing_tests = false

[tool.coverage.run]
source_pkgs = ["zensical_updates"]
branch = true
relative_files = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
